--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -171,6 +171,7 @@
             .crawford-options select {
                 font-size: 1.2rem;
                 padding: 0.4rem;
+                width: 72px;
             }
 
             .jacobi-options label {
@@ -180,6 +181,7 @@
             .jacobi-options select {
                 font-size: 1.2rem;
                 padding: 0.4rem;
+                width: 72px;
             }
 
             .beaver-options label {
@@ -189,6 +191,13 @@
             .beaver-options select {
                 font-size: 1.2rem;
                 padding: 0.4rem;
+                width: 72px;
+            }
+
+            .max-cube-options select {
+                font-size: 1.2rem;
+                padding: 0.4rem;
+                width: 72px;
             }
         }
 
@@ -230,6 +239,7 @@
             .crawford-options select {
                 font-size: 1.5rem;
                 padding: 0.5rem;
+                width: 84px;
             }
 
             .jacobi-options label {
@@ -239,6 +249,7 @@
             .jacobi-options select {
                 font-size: 1.5rem;
                 padding: 0.5rem;
+                width: 84px;
             }
 
             .beaver-options label {
@@ -248,6 +259,13 @@
             .beaver-options select {
                 font-size: 1.5rem;
                 padding: 0.5rem;
+                width: 84px;
+            }
+
+            .max-cube-options select {
+                font-size: 1.5rem;
+                padding: 0.5rem;
+                width: 84px;
             }
         }
 
