--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -36,6 +36,7 @@
             box-sizing: border-box;
         }
 
+        /* Removed .left-panel input[type="number"], .left-panel select to avoid overlapping styles */
 
         h1 {
             display: none;
@@ -459,7 +460,7 @@
         }
 
         .score-inputs input {
-            padding: 0.3125rem;
+            padding: 0.5rem;
             font-size: 0.8rem;
             text-align: center;
             flex: 0 0 60px;
