--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -463,7 +463,7 @@
             padding: 0.5rem;
             font-size: 0.8rem;
             text-align: center;
-            flex: 0 0 60px;
+            width: 60px;
             border: 1px solid #444;
             border-radius: 0.25rem;
             background-color: #2d2d2d;
