--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -375,6 +375,7 @@
         .bar-selector select {
             font-size: 0.96rem;
             width: 60px;
+            height: 40px;
             background-color: #2d2d2d;
             color: white;
             border: 1px solid #444;
@@ -464,6 +465,7 @@
             font-size: 0.8rem;
             text-align: center;
             width: 60px;
+            height: 40px;
             border: 1px solid #444;
             border-radius: 0.25rem;
             background-color: #2d2d2d;
@@ -598,6 +600,7 @@
             font-family: Arial, sans-serif;
             font-size: 0.8rem;
             width: 60px;
+            height: 40px;
             color: white;
             background-color: #2d2d2d;
             border: 1px solid #444;
