--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -32,11 +32,9 @@
             display: flex;
             flex-direction: column;
             width: 50%;
-            gap: 0.3rem;
+            gap: 1rem;
             box-sizing: border-box;
         }
-
-        /* Removed .left-panel input[type="number"], .left-panel select to avoid overlapping styles */
 
         h1 {
             display: none;
@@ -734,7 +732,7 @@
             <label for="turn-select">Чей ход?</label>
             <select id="turn-select"></select>
         </div>
-        <div class="manigeym-panel" style="display: none;">
+        <div class="manigeym-panel">
             <div class="centered-options">
                 <div class="jacobi-options">
                     <div>
