--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -233,11 +233,12 @@
                 font-size: 1.5rem;
                 padding: 0.5rem;
             }
-
+            
+            .jacoby-options
             .beaver-options label {
                 font-size: 1.5rem;
             }
-
+            .jacoby-options
             .beaver-options select {
                 font-size: 1.5rem;
                 padding: 0.5rem;
@@ -597,17 +598,18 @@
             appearance: none;
             text-align: center;
         }
-
+        .jacoby-options
         .beaver-options {
             display: flex;
             flex-direction: column;
         }
-
+        .jacoby-options
         .beaver-options div {
             display: flex;
             align-items: center;
         }
 
+        .jacoby-options
         .beaver-options label {
             color: white;
             font-size: 0.8rem;
@@ -616,6 +618,7 @@
             flex-shrink: 0;
         }
 
+        .jacoby-options
         .beaver-options select {
             font-family: Arial, sans-serif;
             font-size: 0.8rem;
@@ -743,6 +746,15 @@
                     <div>
                         <label for="beaver-select">Бивер</label>
                         <select id="beaver-select">
+                            <option value="0" selected>0</option>
+                            <option value="1">1</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="jacoby-options">
+                    <div>
+                        <label for="jacoby-select">Якоби</label>
+                        <select id="jacoby-select">
                             <option value="0" selected>0</option>
                             <option value="1">1</option>
                         </select>
