--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -502,6 +502,7 @@
 
         .max-cube-options {
             display: flex;
+            gap: 1rem;
             flex-direction: column;
         }
 
@@ -533,6 +534,7 @@
 
         .crawford-options {
             display: flex;
+            gap: 1rem;
             flex-direction: column;
         }
 
@@ -570,6 +572,7 @@
 
         .jacobi-options div {
             display: flex;
+            gap:1rem;
             align-items: center;
         }
 
@@ -597,6 +600,7 @@
 
         .beaver-options {
             display: flex;
+            gap:1rem;
             flex-direction: column;
         }
 
