--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -474,7 +474,7 @@
             height: 30px;
             border: 1px solid #444;
             border-radius: 0.25rem;
-            background-color: #3a3a3a;
+            background-color: #2d2d2d;
             color: white;
             box-sizing: border-box;
             -webkit-appearance: none;
@@ -502,12 +502,12 @@
 
         .max-cube-options {
             display: flex;
-            gap: 1rem;
             flex-direction: column;
         }
 
         .max-cube-options div {
             display: flex;
+            gap: 1rem;
             align-items: center;
         }
 
@@ -534,12 +534,12 @@
 
         .crawford-options {
             display: flex;
-            gap: 1rem;
             flex-direction: column;
         }
 
         .crawford-options div {
             display: flex;
+            gap: 1rem;
             align-items: center;
         }
 
