--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -32,7 +32,8 @@
             display: flex;
             flex-direction: column;
             width: 50%;
-            gap: 1rem;
+            gap: 0.1rem;
+            align-items: center;
             box-sizing: border-box;
         }
 
@@ -572,7 +573,7 @@
 
         .jacobi-options div {
             display: flex;
-            gap:1rem;
+            gap: 1rem;
             align-items: center;
         }
 
@@ -600,7 +601,7 @@
 
         .beaver-options {
             display: flex;
-            gap:1rem;
+            gap: 1rem;
             flex-direction: column;
         }
 
