--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -23,6 +23,7 @@
 
         .left-panel {
             display: flex;
+            padding-left: 1rem;
             flex-direction: column;
             width: 50%;
             box-sizing: border-box;
@@ -508,14 +509,15 @@
 
         .max-cube-options div {
             display: flex;
-            gap: 1rem;
+            flex-direction: column;
+            gap: 0.5rem;
             align-items: center;
         }
 
         .max-cube-options label {
             color: white;
             font-size: 0.8rem;
-            text-align: left;
+            text-align: center;
             flex-shrink: 0;
         }
 
@@ -540,14 +542,15 @@
 
         .crawford-options div {
             display: flex;
-            gap: 1rem;
+            flex-direction: column;
+            gap: 0.5rem;
             align-items: center;
         }
 
         .crawford-options label {
             color: white;
             font-size: 0.8rem;
-            text-align: left;
+            text-align: center;
             flex-shrink: 0;
         }
 
@@ -573,14 +576,15 @@
 
         .jacobi-options div {
             display: flex;
-            gap: 1rem;
+            flex-direction: column;
+            gap: 0.5rem;
             align-items: center;
         }
 
         .jacobi-options label {
             color: white;
             font-size: 0.8rem;
-            text-align: left;
+            text-align: center;
             flex-shrink: 0;
         }
 
@@ -607,13 +611,15 @@
 
         .beaver-options div {
             display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
             align-items: center;
         }
 
         .beaver-options label {
             color: white;
             font-size: 0.8rem;
-            text-align: left;
+            text-align: center;
             flex-shrink: 0;
         }
 
