--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -14,6 +14,11 @@
             margin: 0;
             min-height: 100vh;
         }
+        .crawford-options label,
+        .max-cube-options label {
+            width: 3rem; 
+            flex-shrink: 0;
+        }
 
         .container {
             width: 100%;
@@ -23,7 +28,6 @@
 
         .left-panel {
             display: flex;
-            padding-left: 1rem;
             flex-direction: column;
             width: 50%;
             box-sizing: border-box;
@@ -509,15 +513,14 @@
 
         .max-cube-options div {
             display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
+            gap: 1rem;
             align-items: center;
         }
 
         .max-cube-options label {
             color: white;
             font-size: 0.8rem;
-            text-align: center;
+            text-align: left;
             flex-shrink: 0;
         }
 
@@ -542,15 +545,14 @@
 
         .crawford-options div {
             display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
+            gap: 1rem;
             align-items: center;
         }
 
         .crawford-options label {
             color: white;
             font-size: 0.8rem;
-            text-align: center;
+            text-align: left;
             flex-shrink: 0;
         }
 
@@ -576,15 +578,14 @@
 
         .jacobi-options div {
             display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
+            gap: 1rem;
             align-items: center;
         }
 
         .jacobi-options label {
             color: white;
             font-size: 0.8rem;
-            text-align: center;
+            text-align: left;
             flex-shrink: 0;
         }
 
@@ -611,15 +612,13 @@
 
         .beaver-options div {
             display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
             align-items: center;
         }
 
         .beaver-options label {
             color: white;
             font-size: 0.8rem;
-            text-align: center;
+            text-align: left;
             flex-shrink: 0;
         }
 
