--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -600,25 +600,26 @@
             appearance: none;
             text-align: center;
         }
-
+        .max-cube-options_money
         .beaver-options {
             display: flex;
-            gap: 1rem;
             flex-direction: column;
         }
 
+        .max-cube-options_money div
         .beaver-options div {
             display: flex;
+            gap: 1rem;
             align-items: center;
         }
-
+        .max-cube-options_money div
         .beaver-options label {
             color: white;
             font-size: 0.8rem;
             text-align: left;
             flex-shrink: 0;
         }
-
+        .max-cube-options_money div
         .beaver-options select {
             font-family: Arial, sans-serif;
             font-size: 0.8rem;
@@ -751,7 +752,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="max-cube-options">
+                <div class="max-cube-options_money">
                     <div>
                         <label for="max-cube-select-m">Макс куб</label>
                         <select id="max-cube-select-m">
