--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -606,20 +606,20 @@
             flex-direction: column;
         }
 
-        .max-cube-options_money div
+        .max-cube-options_money
         .beaver-options div {
             display: flex;
             gap: 1rem;
             align-items: center;
         }
-        .max-cube-options_money div
+        .max-cube-options_money 
         .beaver-options label {
             color: white;
             font-size: 0.8rem;
             text-align: left;
             flex-shrink: 0;
         }
-        .max-cube-options_money div
+        .max-cube-options_money 
         .beaver-options select {
             font-family: Arial, sans-serif;
             font-size: 0.8rem;
@@ -634,10 +634,6 @@
             appearance: none;
             text-align: center;
         }
-
-        @media (min-width: 768px) {}
-
-        @media (min-width: 1200px) {}
     </style>
 </head>
 
