--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -600,26 +600,25 @@
             appearance: none;
             text-align: center;
         }
-        .max-cube-options_money
+
         .beaver-options {
             display: flex;
             flex-direction: column;
         }
 
-        .max-cube-options_money
         .beaver-options div {
             display: flex;
             gap: 1rem;
             align-items: center;
         }
-        .max-cube-options_money 
+
         .beaver-options label {
             color: white;
             font-size: 0.8rem;
             text-align: left;
             flex-shrink: 0;
         }
-        .max-cube-options_money 
+
         .beaver-options select {
             font-family: Arial, sans-serif;
             font-size: 0.8rem;
@@ -634,6 +633,41 @@
             appearance: none;
             text-align: center;
         }
+
+        
+        .max-cube-options_money {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .max-cube-options_money div {
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+        }
+
+        .max-cube-options_money label {
+            color: white;
+            font-size: 0.8rem;
+            text-align: left;
+            flex-shrink: 0;
+        }
+
+        .max-cube-options_money select {
+            font-family: Arial, sans-serif;
+            font-size: 0.8rem;
+            width: 60px;
+            height: 30px;
+            color: white;
+            background-color: #2d2d2d;
+            border: 1px solid #444;
+            border-radius: 0.25rem;
+            padding: 0.3125rem;
+            -webkit-appearance: none;
+            appearance: none;
+            text-align: center;
+        }
+
     </style>
 </head>
 
