--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -32,7 +32,7 @@
             display: flex;
             flex-direction: column;
             width: 50%;
-            gap: 0.1rem;
+            gap: 1rem;
             align-items: center;
             box-sizing: border-box;
         }
@@ -254,6 +254,7 @@
             justify-content: space-between;
             align-items: flex-start;
             padding-top: 1rem;
+            padding-left: 1rem;
             margin: 1rem 0;
         }
 
