--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -296,6 +296,8 @@
             font-family: Arial, sans-serif;
             font-size: 0.96rem;
             color: white;
+            width: 2rem;
+            height: 1rem;
             background-color: #2d2d2d;
             border: 1px solid #444;
             border-radius: 0.25rem;
@@ -434,6 +436,7 @@
             box-sizing: border-box;
             flex-direction: row;
             gap: 0.3rem;
+            padding-left: 1rem;
         }
 
         .manigeym-panel {
