--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -184,6 +184,17 @@
             .turn-selector label {
                 font-size: 1.2rem;
             }
+
+            .selector-size {
+                font-size: 1.2rem;
+                width: 72px;
+                padding: 0.4rem;
+            }
+
+            .score-inputs input.selector-size {
+                padding: 0.4rem;
+                flex: 0 0 72px;
+            }
         }
 
         @media (min-width: 1200px) {
@@ -246,6 +257,18 @@
 
             .turn-selector label {
                 font-size: 1.5rem;
+            }
+
+            .selector-size {
+                font-size: 1.44rem;
+                width: 84px;
+                padding: 0.5rem;
+            }
+
+            .score-inputs input.selector-size {
+                font-size: 1.5rem;
+                padding: 0.5rem;
+                flex: 0 0 84px;
             }
         }
 
@@ -383,9 +406,6 @@
         }
 
         .bar-selector select {
-            font-size: 0.96rem;
-            width: 60px;
-            height: 30px;
             background-color: #2d2d2d;
             color: white;
             border: 1px solid #444;
@@ -471,11 +491,7 @@
         }
 
         .score-inputs input {
-            padding: 0.5rem;
-            font-size: 0.8rem;
             text-align: center;
-            width: 60px;
-            height: 30px;
             border: 1px solid #444;
             border-radius: 0.25rem;
             background-color: #2d2d2d;
@@ -520,18 +536,15 @@
             font-size: 0.8rem;
             text-align: left;
             flex-shrink: 0;
-            width: 4rem; 
+            width: 5rem;
         }
 
         .max-cube-options select {
-            width: 60px;
             font-family: Arial, sans-serif;
-            font-size: 0.8rem;
             color: white;
             background-color: #2d2d2d;
             border: 1px solid #444;
             border-radius: 0.25rem;
-            padding: 0.3125rem;
             -webkit-appearance: none;
             appearance: none;
             text-align: center;
@@ -553,19 +566,15 @@
             font-size: 0.8rem;
             text-align: left;
             flex-shrink: 0;
-            width: 4rem; 
+            width: 5rem;
         }
 
         .crawford-options select {
             font-family: Arial, sans-serif;
-            font-size: 0.8rem;
-            width: 60px;
-            height: 30px;
             color: white;
             background-color: #2d2d2d;
             border: 1px solid #444;
             border-radius: 0.25rem;
-            padding: 0.3125rem;
             -webkit-appearance: none;
             appearance: none;
             text-align: center;
@@ -591,14 +600,10 @@
 
         .jacobi-options select {
             font-family: Arial, sans-serif;
-            font-size: 0.8rem;
-            width: 60px;
-            height: 30px;
             color: white;
             background-color: #2d2d2d;
             border: 1px solid #444;
             border-radius: 0.25rem;
-            padding: 0.3125rem;
             -webkit-appearance: none;
             appearance: none;
             text-align: center;
@@ -624,20 +629,23 @@
 
         .beaver-options select {
             font-family: Arial, sans-serif;
-            font-size: 0.8rem;
-            width: 60px;
-            height: 30px;
             color: white;
             background-color: #2d2d2d;
             border: 1px solid #444;
             border-radius: 0.25rem;
-            padding: 0.3125rem;
             -webkit-appearance: none;
             appearance: none;
             text-align: center;
         }
 
-        
+        .selector-size {
+            width: 60px;
+            height: 30px;
+            font-size: 0.8rem;
+            padding: 0.3125rem;
+        }
+
+
         .max-cube-options_money {
             display: flex;
             flex-direction: column;
@@ -658,19 +666,14 @@
 
         .max-cube-options_money select {
             font-family: Arial, sans-serif;
-            font-size: 0.8rem;
-            width: 60px;
-            height: 30px;
             color: white;
             background-color: #2d2d2d;
             border: 1px solid #444;
             border-radius: 0.25rem;
-            padding: 0.3125rem;
             -webkit-appearance: none;
             appearance: none;
             text-align: center;
         }
-
     </style>
 </head>
 
@@ -702,13 +705,13 @@
                     <div class="selectors">
                         <div>
                             <label for="white-bar-select">Белый:</label>
-                            <select id="white-bar-select">
+                            <select id="white-bar-select" class="selector-size">
                                 <option value="0">0</option>
                             </select>
                         </div>
                         <div>
                             <label for="black-bar-select">Черный:</label>
-                            <select id="black-bar-select">
+                            <select id="black-bar-select" class="selector-size">
                                 <option value="0">0</option>
                             </select>
                         </div>
@@ -729,15 +732,15 @@
                     <div class="score-inputs">
                         <div>
                             <label for="lower-score">Очки нижнего игрока:</label>
-                            <input type="number" id="lower-score" min="0" , value="0">
+                            <input type="number" id="lower-score" class="selector-size" min="0" , value="0">
                         </div>
                         <div>
                             <label for="upper-score">Очки верхнего игрока:</label>
-                            <input type="number" id="upper-score" min="0" , value="0">
+                            <input type="number" id="upper-score" class="selector-size" min="0" , value="0">
                         </div>
                         <div>
                             <label for="upper-score">Длина матча:</label>
-                            <input type="number" id="match_lenght" min="0" , value="0">
+                            <input type="number" id="match_lenght" class="selector-size" min="0" , value="0">
                         </div>
                     </div>
                 </div>
@@ -745,7 +748,7 @@
                     <div class="crawford-options">
                         <div>
                             <label for="crawford-select">Кроуфорд</label>
-                            <select id="crawford-select">
+                            <select id="crawford-select" class="selector-size">
                                 <option value="0" selected>0</option>
                                 <option value="1">1</option>
                             </select>
@@ -754,7 +757,7 @@
                     <div class="max-cube-options">
                         <div>
                             <label for="max-cube-select">Макс куб</label>
-                            <select id="max-cube-select">
+                            <select id="max-cube-select" class="selector-size">
                                 <option value="2">2</option>
                                 <option value="4">4</option>
                                 <option value="8" selected>8</option>
@@ -770,7 +773,7 @@
                 <div class="jacobi-options">
                     <div>
                         <label for="jacobi-select">Яйкоби</label>
-                        <select id="jacobi-select">
+                        <select id="jacobi-select" class="selector-size">
                             <option value="0" selected>0</option>
                             <option value="1">1</option>
                         </select>
@@ -779,7 +782,7 @@
                 <div class="beaver-options">
                     <div>
                         <label for="beaver-select">Бивер</label>
-                        <select id="beaver-select">
+                        <select id="beaver-select" class="selector-size">
                             <option value="0" selected>0</option>
                             <option value="1">1</option>
                         </select>
@@ -788,7 +791,7 @@
                 <div class="max-cube-options_money">
                     <div>
                         <label for="max-cube-select-m">Макс куб</label>
-                        <select id="max-cube-select-m">
+                        <select id="max-cube-select-m" class="selector-size">
                             <option value="2">2</option>
                             <option value="4">4</option>
                             <option value="8" selected>8</option>
