--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -513,6 +513,9 @@
             color: white;
             font-size: 0.8rem;
         }
+        .turn-selector select.selector-size{
+            font-size: 0.8rem;
+        }
 
         .score-inputs input::-webkit-outer-spin-button,
         .score-inputs input::-webkit-inner-spin-button {
