--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -513,9 +513,6 @@
             color: white;
             font-size: 0.8rem;
         }
-        .turn-selector select.selector-size{
-            font-size: 0.8rem;
-        }
 
         .score-inputs input::-webkit-outer-spin-button,
         .score-inputs input::-webkit-inner-spin-button {
@@ -806,7 +803,7 @@
         </div>
         <div class="turn-selector">
             <label for="turn-select">Чей ход?</label>
-            <select id="turn-select"></select>
+            <select id="turn-select" class="selector-size"></select>
         </div>
     </div>
 </body>
