--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -805,6 +805,10 @@
             <label for="turn-select">Чей ход?</label>
             <select id="turn-select" class="selector-size"></select>
         </div>
+        <div class="action-buttons">
+            <button id="clear-button">Очистить</button>
+            <button id="show-button">Показать</button>
+        </div>
     </div>
 </body>
 
