--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -77,6 +77,8 @@
             background-color: #007bff;
             color: white;
             border: none;
+            width: 10rem;
+            height: 5rem;
             padding: 0.75rem 1.5rem;
             border-radius: 0.375rem;
             cursor: pointer;
@@ -502,7 +504,7 @@
             appearance: textfield;
         }
         .left_panel{
-            width: 50%;
+            width: 60%;
             padding-left: 1rem;
         }
         .turn-selector {
