--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -77,12 +77,13 @@
             background-color: #007bff;
             color: white;
             border: none;
-            width: 6rem;
+            width: 4rem;
             height: 3rem;
             padding: 0.75rem 1.5rem;
             border-radius: 0.375rem;
             cursor: pointer;
             font-size: 1rem;
+            text-align: center;
             transition: background-color 0.3s;
             margin: 1.25rem;
         }
