--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -77,13 +77,10 @@
             background-color: #007bff;
             color: white;
             border: none;
-            width: 4rem;
-            height: 3rem;
             padding: 0.75rem 1.5rem;
             border-radius: 0.375rem;
             cursor: pointer;
             font-size: 1rem;
-            text-align: center;
             transition: background-color 0.3s;
             margin: 1.25rem;
         }
@@ -504,10 +501,12 @@
             -moz-appearance: textfield;
             appearance: textfield;
         }
-        .left_panel{
+
+        .left_panel {
             width: 60%;
             padding-left: 1rem;
         }
+
         .turn-selector {
             display: flex;
             align-items: center;
@@ -679,6 +678,13 @@
             -webkit-appearance: none;
             appearance: none;
             text-align: center;
+        }
+
+        .action-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            margin: 1rem 0;
         }
     </style>
 </head>
