--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -683,6 +683,15 @@
         .action-buttons {
             display: flex;
             justify-content: center;
+            gap: 1rem;
+            margin: 1rem 0;
+        }
+
+        .action-buttons button {
+            padding: 0.6rem 1.2rem;
+            font-size: 0.8rem;
+            border-radius: 0.3rem;
+            margin: 0;
         }
     </style>
 </head>
