--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -685,6 +685,7 @@
         }
 
         .action-buttons button {
+            padding: 0.6rem 1.2rem;
             font-size: 0.8rem;
             border-radius: 0.3rem;
             margin: 0;
