--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -680,7 +680,7 @@
 
         .action-buttons {
             display: flex;
-            justify-content: center;
+            justify-content: left;
             gap: 1rem;
         }
 
