--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -851,6 +851,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div>
         <div class="left-panel2">
             <div class="turn-selector">
                 <label for="turn-select">Чей ход?</label>
