--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -285,6 +285,13 @@
             width: 100%;
             gap: 0.5rem;
         }
+        .cube_panel{
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            gap: 0.5rem;
+            padding-left: 1rem;
+        }
 
         .selectors-container {
             position: relative;
@@ -502,7 +509,6 @@
 
         .left-panel2 {
             width: 50%;
-            padding-left: 1rem;
         }
 
         .right-panel2 {
@@ -852,7 +858,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class='cube_panel'>
         <div class="left-panel2">
             <div class="turn-selector">
                 <label for="turn-select">Чей ход?</label>
