--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -696,6 +696,7 @@
         .cube-value-options div {
             display: flex;
             gap: 1rem;
+            margin: 1rem 0;
             align-items: center;
         }
 
