--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -873,7 +873,7 @@
         <div class="right-panel2">
             <div class="cube-value-options">
                 <div>
-                    <label for="cube-value-select">Значение на кубе</label>
+                    <label for="cube-value-select">Значение куба</label>
                     <select id="cube-value-select" class="selector-size">
                         <option value="0">0</option>
                         <option value="2">2</option>
