--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -705,7 +705,8 @@
             font-size: 0.8rem;
             text-align: left;
             flex-shrink: 0;
-            width: 6.3rem;
+            padding-left: 0.3rem;
+            width: 6rem;
         }
 
         .cube-value-options select {
