--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -285,7 +285,8 @@
             width: 100%;
             gap: 0.5rem;
         }
-        .cube_panel{
+
+        .cube_panel {
             display: flex;
             flex-direction: row;
             width: 100%;
@@ -525,6 +526,10 @@
         .turn-selector label {
             color: white;
             font-size: 0.8rem;
+        }
+
+        .turn-selector select {
+            width: 120px;
         }
 
         .score-inputs input::-webkit-outer-spin-button,
