--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -510,11 +510,14 @@
 
         .left-panel2 {
             width: 50%;
-            padding-top: 2.5rem;
+            padding-top: 2.6rem;
         }
 
         .right-panel2 {
             width: 50%;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
         }
 
         .turn-selector {
