--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -700,6 +700,7 @@
         .cube-value-options {
             display: flex;
             flex-direction: column;
+            margin: 0;
         }
 
         .cube-value-options div {
@@ -733,7 +734,7 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
-
+            margin: 0;
         }
 
         .cube-owner-selector label {
@@ -749,7 +750,7 @@
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            margin: 1rem 0;
+            margin: 0;
         }
 
         .dice-selector label {
