--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -290,7 +290,7 @@
             display: flex;
             flex-direction: row;
             width: 100%;
-            padding-left: 1rem;
+            gap: 0.5rem;
         }
 
         .selectors-container {
@@ -508,12 +508,13 @@
         }
 
         .left-panel2 {
-            width: 48%;
+            width: 50%;
+            padding-left: 1rem;
             padding-top: 1.3rem;
         }
 
         .right-panel2 {
-            width: 48%;
+            width: 50%;
             display: flex;
             flex-direction: column;
             padding-top: 1rem;
