--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -509,7 +509,7 @@
 
         .left-panel2 {
             width: 50%;
-            padding-left: 1rem;
+            padding-left: 0.5rem;
             padding-top: 1.3rem;
         }
 
@@ -872,7 +872,7 @@
             <div class="centered-options">
                 <div class="jacobi-options">
                     <div>
-                        <label for="jacobi-select">Яйкоби</label>
+                        <label for="jacobi-select">Якоби</label>
                         <select id="jacobi-select" class="selector-size">
                             <option value="0" selected>0</option>
                             <option value="1">1</option>
