--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -529,6 +529,7 @@
 
         .turn-selector label {
             color: white;
+            width: 2rem;
             font-size: 0.8rem;
         }
 
