--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -509,6 +509,7 @@
 
         .left-panel2 {
             width: 50%;
+            padding-left: 1rem;
             padding-top: 1.3rem;
         }
 
@@ -529,7 +530,7 @@
 
         .turn-selector label {
             color: white;
-            width: 2rem;
+            width: 4rem;
             font-size: 0.8rem;
         }
 
