--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -739,6 +739,7 @@
 
         .cube-owner-selector label {
             color: white;
+            width: 3.8rem;
             font-size: 0.8rem;
         }
 
