--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -559,6 +559,7 @@
 
         .action-buttons {
             display: flex;
+            flex-direction: column;
             justify-content: left;
             gap: 1rem;
         }
@@ -569,6 +570,7 @@
             border-radius: 0.3rem;
             margin: 0;
             flex-shrink: 0;
+            width: 100%;
         }
     </style>
 </head>
