--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -119,7 +119,7 @@
             background-color: #2d2d2d;
             color: white;
         }
-    
+
         .selectors-wrapper {
             display: flex;
             justify-content: space-between;
@@ -304,7 +304,9 @@
 
         .left-panel2 {
             width: 50%;
-            gap: 1rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
         }
 
         .right-panel2 {
