--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -307,6 +307,7 @@
             display: flex;
             flex-direction: column;
             gap: 0.5rem;
+            padding-top: 1rem;
         }
 
         .right-panel2 {
@@ -562,6 +563,7 @@
         .action-buttons {
             display: flex;
             flex-direction: column;
+            gap: 0.5rem;
             justify-content: left;
         }
 
