--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -316,6 +316,7 @@
             flex-direction: column;
             padding-top: 1rem;
             gap: 0.5rem;
+            align-items: center;
         }
 
         .turn-selector {
